--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,18 @@
     <groupId>newsitbot</groupId>
     <artifactId>itbot</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.telegram</groupId>
+            <artifactId>telegrambots</artifactId>
+            <version>4.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
+    </dependencies>
     <build>
         <plugins>
             <plugin>
